--- a/apps/client/src/app/Views/statistics/statistics-view.component.html
+++ b/apps/client/src/app/Views/statistics/statistics-view.component.html
@@ -10,85 +10,88 @@
             <i [class]="item.icon + ' mr-2'"></i> {{ item.label }}
           </ng-template>
         </p-selectButton>
-        <p-button icon="pi pi-download"
-                  label="Export"
-                  severity="info"
-                  size="small"
-                  (onClick)="exportToCSV()"/>
+        <p-button icon="pi pi-download" label="Export" severity="info" size="small" (onClick)="exportToCSV()" />
       </div>
     </div>
     <form [formGroup]="filterForm" class="grid formgrid p-fluid">
       <div class="col-12 md:col-2">
         <label class="font-medium text-sm">Sampling</label>
         <p-select [options]="samplingOptions" formControlName="sampling" optionLabel="label" optionValue="value"
-                  appendTo="body" class="w-full" pStyleClass="w-full"/>
+          appendTo="body" class="w-full" pStyleClass="w-full" />
       </div>
       <div class="col-12 md:col-3">
         <label class="font-medium text-sm">Date Range</label>
         <p-datePicker rangeSeparator=" - " selectionMode="range" pStyleClass="w-full" class="w-full"
-                      formControlName="dateRange"/>
+          formControlName="dateRange" />
       </div>
       <div class="col-12 md:col-2">
         <label class="font-medium text-sm">Severity</label>
         <p-select [options]="severityOptions" formControlName="severity" optionLabel="label" optionValue="value"
-                  appendTo="body" class="w-full" pStyleClass="w-full"/>
+          appendTo="body" class="w-full" pStyleClass="w-full" />
+      </div>
+      <div class="col-12 md:col-2">
+        <label class="font-medium text-sm">Project</label>
+        <p-select [options]="projects() || []" formControlName="projectId" optionLabel="name" optionValue="projectId"
+          placeholder="All Projects" [showClear]="true" appendTo="body" class="w-full" pStyleClass="w-full" />
       </div>
       <div class="col-12 md:col-3">
+        <label class="font-medium text-sm">Environment</label>
+        <p-select [options]="environments() || []" formControlName="environmentId" optionLabel="name"
+          optionValue="environmentId" placeholder="All Environments" [showClear]="true" appendTo="body" class="w-full"
+          pStyleClass="w-full" />
+      </div>
+      <div class="col-12 md:col-10">
         <label class="font-medium text-sm">Search</label>
         <p-iconfield iconPosition="left" class="w-full">
-          <p-inputicon class="pi pi-search"/>
-          <input pInputText formControlName="textFilter" placeholder="Search logs/details..." class="w-full"/>
+          <p-inputicon class="pi pi-search" />
+          <input pInputText formControlName="textFilter" placeholder="Search logs/details..." class="w-full" />
         </p-iconfield>
       </div>
       <div class="col-12 md:col-2 flex align-items-end">
-        <button pButton label="Generate" icon="pi pi-refresh" (click)="loadStatistics()"
-                [loading]="isLoading()"></button>
+        <button pButton label="Generate" icon="pi pi-refresh" (click)="loadStatistics()" class="w-full"
+          [loading]="isLoading()"></button>
       </div>
     </form>
   </div>
   <div class="flex-1 surface-card p-4 shadow-2 border-round relative">
     @if (isLoading()) {
-      <div class="absolute w-full h-full flex align-items-center justify-content-center bg-white-alpha-70 z-5"
-           style="top:0; left:0;">
-        <i class="pi pi-spin pi-spinner text-4xl text-primary"></i>
-      </div>
+    <div class="absolute w-full h-full flex align-items-center justify-content-center bg-white-alpha-70 z-5"
+      style="top:0; left:0;">
+      <i class="pi pi-spin pi-spinner text-4xl text-primary"></i>
+    </div>
     }
     @if (viewControl.value === 'chart') {
-      @if (tableData().length > 0) {
-        <div class="h-full w-full">
-          <apx-chart [series]="chartOptions.series"
-                     [chart]="chartOptions.chart"
-                     [fill]="chartOptions.chart.fill"
-                     [stroke]="chartOptions.chart.stroke"
-                     [xaxis]="chartOptions.xaxis"
-                     [title]="chartOptions.title"
-                     [autoUpdateSeries]="true"/>
-        </div>
-      } @else {
-        <div class="flex align-items-center justify-content-center h-full">
-          <span class="text-color-secondary font-medium">No stats found.</span>
-        </div>
-      }
+    @if (tableData().length > 0) {
+    <div class="h-full w-full">
+      <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [fill]="chartOptions.chart.fill"
+        [stroke]="chartOptions.chart.stroke" [xaxis]="chartOptions.xaxis" [title]="chartOptions.title"
+        [dataLabels]="chartOptions.dataLabels" [autoUpdateSeries]="true" />
+    </div>
     } @else {
-      <p-table [value]="tableData()" [scrollable]="true" scrollHeight="flex" styleClass="p-datatable-sm">
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Date</th>
-            <th>Count</th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-item>
-          <tr>
-            <td>{{ item.date }}</td>
-            <td>{{ item.value }}</td>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="emptymessage">
-          <tr>
-            <td colspan="2" class="text-center p-4">No data found.</td>
-          </tr>
-        </ng-template>
-      </p-table>
+    <div class="flex align-items-center justify-content-center h-full">
+      <span class="text-color-secondary font-medium">No stats found.</span>
+    </div>
+    }
+    } @else {
+    <p-table [value]="tableData()" [scrollable]="true" scrollHeight="flex" styleClass="p-datatable-sm">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Date</th>
+          <th>Count</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-item>
+        <tr>
+          <td>{{ item.date }}</td>
+          <td>{{ item.value }}</td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="2" class="text-center p-4">No data found.</td>
+        </tr>
+      </ng-template>
+    </p-table>
     }
   </div>
 </div>
